Add pawns and pawn logic, integrate dice throws

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,4 +1,4 @@
 <div class="board-container">
-    <app-tile *ngFor="let element of tempList" [id]="element.id" [visible]="element.visible"
-        [color]="element.color"></app-tile>
-    <div>
+	<app-tile *ngFor="let element of tempList" [id]="element.id" [visible]="element.visible" [color]="element.color"
+		[pawn]="element.pawn"></app-tile>
+	<div>
