--- a/src/app/dice/dice.component.html
+++ b/src/app/dice/dice.component.html
@@ -1,6 +1,6 @@
 <div class="dice-container">
-    <div class="dice">
-        {{id}}
-    </div>
-    <button class="roll-button" (click)="roll()">Roll</button>
+	<div class="dice">
+		{{result}}
+	</div>
+	<button class="roll-button" (click)="roll()">Roll</button>
 </div>
