Add dice synchronization, add game starting

--- a/src/app/dice/dice.component.html
+++ b/src/app/dice/dice.component.html
@@ -2,5 +2,5 @@
 	<div class="dice">
 		{{result}}
 	</div>
-	<button class="roll-button" (click)="roll()">Roll</button>
+	<button class="roll-button" (click)="roll()" [disabled]="disabled">Roll</button>
 </div>
