Add turn change, add turn skip if no move possible, fix collisions

--- a/src/app/lobby/lobby.component.html
+++ b/src/app/lobby/lobby.component.html
@@ -1,6 +1,6 @@
 <div class="lobby">
 	<div *ngFor="let player of players" class="player-container"
-		[ngStyle]="{'background-color': player.status == 1 ? player.color : 'none'}">
+		[ngStyle]="{'background-color': player.status > 0 ? player.color : 'none'}">
 		{{player.nick}}
 	</div>
 </div>
