--- a/src/app/tile/tile.component.html
+++ b/src/app/tile/tile.component.html
@@ -1,3 +1,4 @@
 <div [ngClass]="{'hidden': !visible, 'tile': true}" [ngStyle]="{'background-color':color}">
-	<div (click)="move()" [ngClass]="{'pawn': pawn != 'none'}" [ngStyle]="{'background-color': pawn}">{{id}}</div>
+	<div (click)="move()" [ngClass]="{'pawn': pawn != 'none', 'highlighted': highlighted}"
+		[ngStyle]="{'background-color': pawn}">{{id}}</div>
 </div>
