--- a/src/app/tile/tile.component.html
+++ b/src/app/tile/tile.component.html
@@ -1,4 +1,5 @@
-<div [ngClass]="{'hidden': !visible, 'tile': true}" [ngStyle]="{'background-color':color}">
-	<div (click)="move()" [ngClass]="{'pawn': pawn != 'none', 'highlighted': highlighted}"
-		[ngStyle]="{'background-color': pawn}">{{id}}</div>
+<div [ngClass]="{'hidden': !visible, 'tile': true, 'proposition': proposition}" [ngStyle]="{'background-color': color}">
+	<div (click)="move()" (mouseover)="showMoveOption()" (mouseout)="hideMoveOption()"
+		[ngClass]="{'pawn': pawn != 'none', 'highlighted': highlighted}" [ngStyle]="{'background-color': pawn}">{{id}}
+	</div>
 </div>
