--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,4 +1,4 @@
 <div class="board-container">
 	<app-tile *ngFor="let element of tempList" [id]="element.id" [visible]="element.visible" [color]="element.color"
-		[pawn]="element.pawn" [highlighted]="element.highlighted"></app-tile>
+		[pawn]="element.pawn" [highlighted]="element.highlighted" [proposition]="element.proposition"></app-tile>
 	<div>
