Add timer, add turn change on timeout, rewrite config.php

--- a/src/app/dice/dice.component.css
+++ b/src/app/dice/dice.component.css
@@ -10,7 +10,7 @@
 .dice {
     width: 100px;
     height: 100px;
-    border: 1px solid black;
     text-align: center;
     margin-bottom: 20px;
+    font-size: 500%;
 }
