--- a/src/app/dice/dice.component.html
+++ b/src/app/dice/dice.component.html
@@ -1,6 +1,6 @@
 <div class="dice-container">
 	<div class="dice">
-		{{result}}
+		{{dice[result - 1]}}
 	</div>
 	<button class="roll-button" (click)="roll()" [disabled]="disabled">Roll</button>
 </div>
