--- a/src/app/lobby/lobby.component.css
+++ b/src/app/lobby/lobby.component.css
@@ -11,5 +11,14 @@
 	width: 200px;
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-around;
+}
+
+.timer {
+	background-color: white;
+	border-radius: 10px;
+	padding: 5px;
+	width: 50px;
+	text-align: center;
+	margin: 5px;
 }
