Fix speech synthesis language

--- a/src/app/language/language.component.html
+++ b/src/app/language/language.component.html
@@ -1,7 +1,7 @@
 <div class="language-container">
 	<label for="language-select">Wybierz język: </label>
 	<select name="language-select" id="language-select" #languages (change)="languageChanged(languages.value)">
-		<option value="pol">Polski</option>
-		<option value="eng">Angielski</option>
+		<option value="pl">Polski</option>
+		<option value="en">Angielski</option>
 	</select>
 </div>
