Add gettext translation

--- a/src/app/dice/dice.component.html
+++ b/src/app/dice/dice.component.html
@@ -2,5 +2,5 @@
 	<div class="dice">
 		{{dice[result - 1]}}
 	</div>
-	<button class="roll-button" (click)="roll()" [disabled]="disabled">Roll</button>
+	<button class="roll-button" (click)="roll()" [disabled]="disabled">{{rollText}}</button>
 </div>
